arrange small design bug on sidebar cart if product title too long

--- a/app/assets/stylesheets/components/_cart.scss
+++ b/app/assets/stylesheets/components/_cart.scss
@@ -59,6 +59,8 @@
   .cart-product {
     .cart-product-info {
       padding-left: 20px;
+      padding-right: 10px;
+      max-width: 169px;
     }
     p {
       margin-bottom: 0px;
